--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -18,8 +18,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/configure-pages@v3
-      # - name: Install fonts
-      #   run: sudo apt install fonts-noto fonts-noto-cjk fonts-noto-cjk-extra
+      - name: Install fonts
+        run: sudo apt install fonts-noto fonts-noto-cjk fonts-noto-cjk-extra
       - uses: typst-community/setup-typst@v3
       - name: Compile
         run: |
