--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -19,7 +19,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/configure-pages@v3
       - name: Install fonts
-        run: sudo apt install fonts-noto fonts-noto-cjk fonts-noto-cjk-extra
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y fonts-noto fonts-noto-cjk fonts-noto-cjk-extra
       - uses: typst-community/setup-typst@v3
       - name: Compile
         run: |
